--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -17,6 +17,7 @@
           <li><a href="/" class="left brand-logo">&nbsp;&nbsp;DogCollector</a></li>
         </ul>
         <ul class="right">
+          <li><a href="{% url 'dogs_create' %}">Create Dog</a></li>
           <li><a href="/dogs">View all Dogs</a></li>
           <li><a href="/about">About</a></li>
         </ul>
